--- a/app/views/assistant/threads/_message.html.erb
+++ b/app/views/assistant/threads/_message.html.erb
@@ -1,6 +1,6 @@
 <%# locals: message %>
 <% is_user = message.role == "user" %>
-<div id="<%= dom_id(message) %>" class="flex <%= is_user ? 'justify-end' : 'justify-start' %> group">
+<div id="<%= dom_id(message) %>" data-role="<%= message.role %>" class="flex <%= is_user ? 'justify-end' : 'justify-start' %> group">
   <div class="<%= is_user ? 'bg-primary-600 text-white' : 'bg-gray-100 dark:bg-gray-800' %> rounded-2xl px-4 py-2.5 max-w-[80%] <%= is_user ? '' : 'text-gray-900 dark:text-gray-100' %>">
     <div class="text-sm leading-relaxed <%= is_user ? '' : 'chat-message-content' %>">
       <%= render_chat_message(message) %>
